--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -11,60 +11,81 @@
 </head>
 
 <body>
-  <div class="container">
-    <form>
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label for="inputEmail4">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+  <div class="container" style="margin-top: 90px;">
+    <div class="row align-self-center justify-content-center">
+      <h2>Create Your Account</h2>
+    </div>
+    <div class="row justify-content-center">
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputFirstName">First Name</label>
+            <input type="FirstName" class="form-control" placeholder="Your First Name">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputLastName">Last Name</label>
+            <input type="LastName" class="form-control" placeholder="Your Last Name">
+          </div>
         </div>
-        <div class="form-group col-md-4">
-          <label for="inputPassword4">Password</label>
-          <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputEmail">Email</label>
+            <input type="email" class="form-control" placeholder="Your Email">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputPassword4">Password</label>
+            <input type="password" class="form-control" placeholder="Password">
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputCity">
+        <div class="form-group">
+          <label for="inputAddress">Address</label>
+          <input type="text" class="form-control col-md-12" placeholder="Your Address">
         </div>
-        <div class="form-group col-md-4">
-          <label for="inputZip">Zip</label>
-          <input type="text" class="form-control" id="inputZip">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" placeholder="Your City">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputZip">Zip</label>
+            <input type="text" class="form-control" placeholder="Your Zip Code">
+          </div>
         </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputCity">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">State</label>
+            <input type="text" class="form-control" placeholder="Your State">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputState">Country</label>
+            <select id="inputState" class="form-control">
+              <option selected>United States</option>
+              <option>...</option>
+            </select>
+          </div>
         </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">Country</label>
-          <select id="inputState" class="form-control">
-            <option selected>United States</option>
-            <option>...</option>
-          </select>
+        <div class="form-group">
+          <div class="form-check">
+            <label class="form-check-label">
+            <input class="form-check-input" type="checkbox"> I agree with <a href="#"><u class="text-dark">Terms and Conditions</u></a>
+          </label>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <div class="form-check">
-          <label class="form-check-label">
-          <input class="form-check-input" type="checkbox"> I agree with <a href="#">Terms and Conditions</a>
-        </label>
+        <div class="row">
+          <button type="submit" class="btn btn-dark register-cinch-submit btn-cinch">
+            Sign in
+          </button>
         </div>
-      </div>
-      <button type="submit" class="btn btn-dark btn-block">Sign in</button>
-      <button type="submit" class="btn btn-primary"> 
-        <img src="../images/Facebook Logo.png"> Sign in with Facebook
-      </button>
-      <button type="submit" class="btn btn-light"> 
-        <img src="../images/logo_googleg_48dp.png"> Sign in with Google
-      </button>
-    </form>
+        <div class="row py-2">
+          <button type="submit" class="btn btn-primary col-md-6"> 
+            <img src="../images/Facebook Logo.png"> Sign in with Facebook
+          </button>
+          <button type="submit" class="btn btn-light col-md-6"> 
+            <img src="../images/logo_googleg_48dp.png"> Sign in with Google
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
 </body>
 
