--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -37,136 +37,127 @@
       </nav>
     </div>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <form>
-        <div class="form-row">
-          <div class="form-group col-md-3">
+        <div class="form-row justify-content-center">
+          <div class="form-group col-auto">
             <label for="inputSport">Sport</label>
             <select id="inputSport" class="form-control">
               <option selected>Choose...</option>
               <option>...</option>
             </select>
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-auto">
             <label for="inputType">Type</label>
             <select id="inputType" class="form-control">
               <option selected>Choose...</option>
               <option>...</option>
             </select>
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-auto">
             <label for="inputCity">Location</label>
             <input type="text" class="form-control" id="inputCity">
           </div>
-          <div class="form-group col-md-3">
+          <div class="form-group col-auto">
             <label for="inputZip">Start Date</label>
             <input type="date" class="form-control" id="inputZip">
           </div>
-          <div class="form-group">
+          <div class="form-group col-auto">
             <button class="btn btn-dark">Search</button>
           </div>
         </div>
       </form>
     </div>
     <div class="row">
-      <div class="container">
-        <div class="text-center">
-          <div class="col col-md-4">
-            <div class="row">
-              <img src="../images/Arsenal_FC.svg.png">
-            </div>
-            <div class="row">
-              <span>ARSENAL FC</span>
-            </div>
-          </div>
-          <div class="col col-md-4">
-            <h3>SOCCER CAMP</h3>
-            <span>July 20-24 9am-3pm</span>
-            <span>Ages 5-14</span>
-            <span>@ Mirasol Park</span>
-          </div>
-          <div class="col col-md-4">
-             Arsenal FC offers players a unique look into how to train the Arsenal Way.
-          </div>
-          <div class="col col-md-4">
-            <div class="col">
-              $599
-            </div>
-            <div class="col">
-              <button class="btn btn-dark">Select</button>
-            </div>  
-          </div>
+      <div class="col-auto">
+        <div class="row">
+          <img src="../images/Arsenal_FC.svg.png">
+        </div>
+        <div class="row">
+          <span>ARSENAL FC</span>
         </div>
       </div>
+      <div class="col-auto">
+        <h3>SOCCER CAMP</h3>
+        <span>July 20-24 9am-3pm</span>
+        <span>Ages 5-14</span>
+        <span>@ Mirasol Park</span>
+      </div>
+      <div class="col-auto">
+          Arsenal FC offers players a unique look into how to train the Arsenal Way.
+      </div>
+      <div class="col-auto">
+        $599
+      </div>
+      <div class="col-auto">
+        <button class="btn btn-dark">Select</button>
+      </div>  
     </div>
+  </div>
+  <div class="footer m-5 p-2 containter-fluid">
     <div class="row mx-5 justify-content-around">
-      <div class="footer m-5 p-2 containter-fluid">
-        <div class="row mx-5 justify-content-around">
-          <div class="col mx-5">
-            <div class="list-group">
-              <span class="list-group-item border-0">Cinch Sports </span>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Developers</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="list-group">
-              <span class="list-group-item border-0">Help </span>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Forums</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="list-group">
-              <span class="list-group-item border-0">More </span>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
-              <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Cinch Sportswear</a>
-            </div>
-          </div>
-          <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
-            <div class="row pb-3">
-              follow us
-            </div>
-            <div class="d-flex footer-images justify-content-md-start row">
-              <div class="col-md-1 px-0 mx-0">
-                <img src="../images/Twitter Icon.png" alt="Twitter">
-              </div>
-              <div class="col-md-1 px-0 mx-0">
-                <img src="../images/Facebook Icon.png" alt="Facebook">
-              </div>
-              <div class="col-md-1 px-0 mx-0">
-                <img src="../images/Google Icon.png" alt="Google Plus">
-              </div>
-              <div class="col-md-1 px-0 mx-0">
-                <img src="../images/Tumblr Icon.png" alt="Tumblr">
-              </div>
-            </div>
-            <form class="row">
-              <div class="row">
-                <div class="col my-5 pb-3">
-                  <label for="subscribe">Subscribe</label>
-                  <div class="input-group">
-                    <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
-                    <span class="input-group-btn">
-                      <button type="submit" class="btn btn-dark rounded-0">
-                        SIGN UP
-                      </button>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
+      <div class="col mx-5">
+        <div class="list-group">
+          <span class="list-group-item border-0">Cinch Sports </span>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Developers</a>
         </div>
       </div>
+      <div class="col">
+        <div class="list-group">
+          <span class="list-group-item border-0">Help </span>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Forums</a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="list-group">
+          <span class="list-group-item border-0">More </span>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
+          <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Cinch Sportswear</a>
+        </div>
+      </div>
+      <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
+        <div class="row pb-3">
+          follow us
+        </div>
+        <div class="d-flex footer-images justify-content-md-start row">
+          <div class="col-md-1 px-0 mx-0">
+            <img src="../images/Twitter Icon.png" alt="Twitter">
+          </div>
+          <div class="col-md-1 px-0 mx-0">
+            <img src="../images/Facebook Icon.png" alt="Facebook">
+          </div>
+          <div class="col-md-1 px-0 mx-0">
+            <img src="../images/Google Icon.png" alt="Google Plus">
+          </div>
+          <div class="col-md-1 px-0 mx-0">
+            <img src="../images/Tumblr Icon.png" alt="Tumblr">
+          </div>
+        </div>
+        <form class="row">
+          <div class="row">
+            <div class="col my-4">
+              <label for="subscribe" class="pb-3">Subscribe</label>
+              <div class="input-group">
+                <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-dark rounded-0">SIGN UP</button>
+                </span>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
