--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lato:700|Montserrat:200,300,800|Roboto:500" rel="stylesheet">
   <link href="../style/master.css" rel="stylesheet">
 </head>
 
@@ -21,19 +22,19 @@
         <form>
           <div class="row justify-content-center my-2">
             <div class="form-group col-md-12 text-left">
-              <label for="exampleInputEmail1">Email address</label>
+              <label for="exampleInputEmail1" class="text-uppercase">E-Mail</label>
               <input type="email" class="form-control py-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email Address">
             </div>
           </div>
           <div class="row justify-content-center my-3">
             <div class="form-group col-md-12 text-left">
-              <label for="login-password">Password</label>
+              <label for="login-password" class="text-uppercase">Password</label>
               <input type="password" class="form-control py-3" id="login-password" placeholder="Password">
             </div>
           </div>
           <div class="col text-center align-items-center">
             <div class="row justify-content-center">
-              <button type="submit" class="btn btn-cinch btn-block py-3 my-1">Login</button>
+              <button type="submit" class="btn btn-cinch btn-block py-3 my-1 text-uppercase">Login</button>
             </div>
             <div class="row justify-content-center">
               <button type="submit" class="btn btn-facebook btn-block text-light py-2 my-2"> 
