--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lato:700|Montserrat:200,300,800|Roboto:500" rel="stylesheet">
   <link href="../style/master.css" rel="stylesheet">
 </head>
 
@@ -24,13 +25,13 @@
     <div class="col search-membership-buttons">
       <form class="form-inline">
         <div class="col">
-          <button class="btn btn-light nav-link border-0 rounded-0">
-            Login
+          <button class="btn btn-light nav-link border rounded-0 text-uppercase" style="width: 144px;">
+            Join
           </button>
         </div>
         <div class="col">
-          <button class="btn nav-link border-0 rounded-0">
-            Sign Up
+          <button class="btn nav-link border-0 rounded-0 text-uppercase">
+            Login
           </button>
         </div>
       </form>
@@ -42,25 +43,25 @@
       <form style="width: 1162px;">
         <div class="form-row align-items-center px-auto mx-auto">
           <div class="form-group col-auto ml-0 pl-0 mr-3" style="width: 170px; margin-left: 10px;">
-            <label for="inputSport">Sport</label>
+            <label for="inputSport" class="text-uppercase">Sport</label>
             <select id="inputSport" class="detail-search-input form-control">
                 <option selected>Soccer</option>
                 <option>...</option>
               </select>
           </div>
           <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label for="inputType">Type</label>
+            <label for="inputType" class="text-uppercase">Type</label>
             <select id="inputType" class="detail-search-input form-control">
               <option selected>Camps</option>
               <option>...</option>
             </select>
           </div>
           <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label for="inputCity">Location</label>
+            <label for="inputCity" class="text-uppercase">Location</label>
             <input type="text" class="form-control detail-search-input" id="inputCity">
           </div>
           <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label for="inputZip">Start Date</label>
+            <label for="inputZip" class="text-uppercase">Start Date</label>
             <input type="date" class="form-control detail-search-input" id="inputZip">
           </div>
           <div class="col-3 pt-3">
@@ -75,11 +76,11 @@
           <img src="../images/Arsenal_FC.svg.png">
         </div>
         <div class="row">
-          <span>ARSENAL FC</span>
+          <span class="text-uppercase">ARSENAL FC</span>
         </div>
       </div>
       <div class="col-2">
-        <h3>SOCCER CAMP</h3>
+        <h3 class="text-uppercase">Soccer Camp</h3>
         <span>July 20-24 9am-3pm</span>
         <span>Ages 5-14</span>
         <span>@ Mirasol Park</span>
